--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -19,6 +19,7 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+@import "tailwindcss";
 
 @tailwind base;
 @tailwind components;
